--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.main.allow-circular-references=true
+
+server.port=8080
